test_src/compiler_errors/types/binary/XorBoolError2.b
class XorBoolError2 {
    void test() {
        println(2 ^ false);
    }
}
